<resources>
    <string name="app_name">SmartBoard</string>

    <string name="module1">Compilers</string>
    <string name="module2">Software</string>
    <string name="module3">Java</string>
    <string name="module4">assembly</string>
    <string name="module5">C++</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="nameHint">Enter Name</string>
    <string name="passHint">Password</string>
    <string name="login">Login</string>
    <string name="stayLoggedIn">stay logged in</string>
    <string name="smartboardIcon">Smartboard Icon</string>
    <string name="HomeScreen">HomeScreen</string>
    <string name="createAccount"><u>Create new account/edit settings</u></string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="student_account">Student Account</string>
    <string name="lecturer_account">Lecturer Account</string>
    <string name="lecturerid">Lecturer ID:</string>
    <string name="lecturername">Lecturer Name:</string>
    <string name="studentid">Student ID:</string>
    <string name="userid">User ID:</string>
    <string name="studentname">Student Name:</string>
    <string name="password">Password:</string>
    <string name="modulecode">Module Code:</string>
    <string name="activationcode">Activation Code:</string>
    <string name="addmodule">Add Module</string>
    <string name="create">Create</string>
    <string name="clear">Clear</string>
    <string name="add_delete_module">add/delete module</string>
    <string name="deletemodule">Delete Module</string>
    <string name="startlecture">Start a lecture.</string>
    <string name="title_activity_start_lecture">StartLecture</string>
    <string name="video">Video</string>
    <string name="notes">notes</string>
    <string name="attachment">attachment</string>
    <string name="attachment_name">Attachment Name</string>
    <string name="send">Send</string>
    <string name="choosefile">Choose A File</string>
</resources>
