<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00a7e4"
    tools:context=".CreateEditAccount">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:id="@+id/selectUserType">
        <RadioButton
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_account"
            android:id="@+id/selectStudent"/>

        <RadioButton
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lecturer_account"
            android:layout_marginStart="10dp"
            android:id="@+id/selectLecturer"/>
        <RadioButton
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_delete_module"
            android:layout_marginStart="10dp"
            android:id="@+id/add_delete_module"/>
    </RadioGroup>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/selectUserType"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:background="@drawable/underline"
            android:id="@+id/userId">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/studentid"
                android:id="@+id/idField"/>

            <EditText
                android:id="@+id/useridField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:ems="10"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/underline"
            android:id="@+id/userPassword">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/password" />

            <EditText
                android:id="@+id/passwordField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:ems="10"
                android:inputType="textVisiblePassword"/>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/moduleCode">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/modulecode" />

            <EditText
                android:id="@+id/moduleCodeField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:ems="10"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/underline"
            android:id="@+id/activationCode"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.30"
                android:text="@string/activationcode" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/activationCodeField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:inputType="textPersonName"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/moduleButton">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/moduleAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:text="@string/addmodule" />

                <Button
                    android:id="@+id/moduleDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:text="@string/deletemodule" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/submit_clear_button">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:text="@string/create" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:text="@string/clear" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
