<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00a7e4"
    tools:context="forthyearproject.smartboard.CreateEditAccount">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:id="@+id/selectUserType">
        <RadioButton
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:layout_marginStart="10dp"
            android:id="@+id/selectNotes"
            android:checked="true"/>

        <RadioButton
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attachment"
            android:layout_marginStart="10dp"
            android:id="@+id/selectAttachment"/>

        <RadioButton
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video"
            android:id="@+id/selectVideo"/>
    </RadioGroup>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/selectUserType"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:background="@drawable/underline"
            android:id="@+id/lectureId">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/lecturerid"
                android:id="@+id/lectureid"/>

            <EditText
                android:id="@+id/lectureidform"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:ems="10"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:background="@drawable/underline"
            android:id="@+id/lecturePass">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/password"
                android:id="@+id/lecturepass"/>

            <EditText
                android:id="@+id/lecturepassform"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:ems="10"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp"
            android:background="@drawable/underline"
            android:id="@+id/attachmentName">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/attachment_name"
                android:id="@+id/attachmentname"/>

            <EditText
                android:id="@+id/attachmentnameform"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:ems="10"
                android:inputType="textPersonName"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/chooseAndSendFile">

            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.70"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/chooseFile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:text="@string/choosefile" />

                <Button
                    android:id="@+id/sendFile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:text="@string/send" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>